--- a/html/Description/802OM.html
+++ b/html/Description/802OM.html
@@ -1,8 +1,2 @@
-<html>
-    <p>Owner’s Manual - Air Tractor Model AT-802 and AT-802A- Agricultural, Fire-Fighting, Patrolling, and Surveying Airplane Manual 03-0121.</p>
-
-    <p style="margin-left: 30px; line-height: 0;">Air Tractor Inc.</p>
-    <p style="margin-left: 30px; line-height: 0;">Municipal Airport</p>
-    <p style="margin-left: 30px; line-height: 0;">P.O. Box 485</p>
-    <p style="margin-left: 30px; line-height: 0;">Olney, Texas 76374 U.S.A</p>
-</html>
+<p>Owner’s Manual - Air Tractor Model AT-802 and AT-802A- Agricultural, Fire-Fighting, Patrolling, and Surveying
+    Airplane Manual 03-0121.</p>
