--- a/html/Description/CERTIFICATION BASIS.html
+++ b/html/Description/CERTIFICATION BASIS.html
@@ -1,5 +1,7 @@
-<html>
-    <p>The AT-802 or AT-802A is structurally certified to meet the requirements of FAR 23. The engine installation along with the systems and equipment meet FAR 23 requirements except in cases deemed inappropriate for intended operations. In these cases placards are installed on the instrument panel which prohibit flying under those special conditions. The AT-802 and AT-802A are certified by the FAA for a gross weight of 16,000 pounds.</p>
-
-    <p>Certification basis is FAR 21.25. Airworthiness requirements of FAR 23 were met with certain sections excepted as inappropriate for the special-purpose use of agricultural and forest and wildlife conservation. For more information on the certification basis see FAA Type Certificate Data Sheet A19SW.</p>
-</html>
+<p>The AT-802 or AT-802A is structurally certified to meet the requirements of FAR 23. The engine installation along
+    with the systems and equipment meet FAR 23 requirements except in cases deemed inappropriate for intended
+    operations. In these cases placards are installed on the instrument panel which prohibit flying under those special
+    conditions. The AT-802 and AT-802A are certified by the FAA for a gross weight of 16,000 pounds.</p>
+<p>Certification basis is FAR 21.25. Airworthiness requirements of FAR 23 were met with certain sections excepted as
+    inappropriate for the special-purpose use of agricultural and forest and wildlife conservation. For more information
+    on the certification basis see FAA Type Certificate Data Sheet A19SW.</p>
