--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             font-size: 1.0em;
             break-after: avoid;
         }
+        .breakBeforeRight{
+            break-before: right;
+        }
 
         @page {
             @top-center {
