--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
                 content: element(headerCenter);
             }
         }
+
+
+        .tableInspections{
+            width: 90%;
+        }
+        .cellInspectionNumber{
+            width: 5%;
+            min-width: 3em;
+        }
+        .cellInspectionInterval{
+            width: 5%;
+            min-width: 4em;
+        }
+        .cellInspectionText{
+            width: 90%;
+        }
     </style>
 </head>
 
