--- a/html/Inspection/Insp_GENERAL.html
+++ b/html/Inspection/Insp_GENERAL.html
@@ -2,7 +2,7 @@
     <tr>
         <td class="cellInspectionNumber">G1</td>
         <td class="cellInspectionInterval">(---)</td>
-        <td class="cellInspectionText">Check Maintenance and Lubrication sections of this manual for necessary
+        <td class="cellInspectionText"><span style="color: red;">Check Maintenance and Lubrication sections of this manual</span> for necessary
             maintenance and lubrication tasks.
         </td>
     </tr>
