--- a/html/Inspection/Insp_PROPELLER.html
+++ b/html/Inspection/Insp_PROPELLER.html
@@ -21,8 +21,8 @@
     <tr>
         <td class="cellInspectionNumber">P4</td>
         <td class="cellInspectionInterval">(100)</td>
-        <td class="cellInspectionText">Check propeller overspeed-solenoid circuit as described in the Maintenance Section,
-            PROPELLER MAINTENANCE.
+        <td class="cellInspectionText">Check propeller overspeed-solenoid circuit <span style="color: red;">as described in the Maintenance Section,
+            PROPELLER MAINTENANCE.</span> 
         </td>
     </tr>
     <tr>
