--- a/html/Intro/TITLE.html
+++ b/html/Intro/TITLE.html
@@ -4,6 +4,7 @@
 <p class="titlePage2">Document No.: 03-0121</p>
 <p class="titlePage2">AGRICULTURAL, FIRE-FIGHTING, PATROLLING, AND 
     SURVEYING AIRPLANES</p>
-<p class="titlePage3">Latest Revision Date: 12/12/2024</p>
+<p class="titlePage3 breakAfter">Latest Revision Date: 12/12/2024</p>
 
-<img class="imageCentered_6x8" src="img/img_802_ThreeView.png">
+<img class="imageCentered_6x8 breakAfter" src="img/img_802_ThreeView.png">
+<img class="imageCentered_6x8 breakAfter" src="img/img_802A_ThreeView.png">
