--- a/html/Inspection/Insp_OIL SYSTEM.html
+++ b/html/Inspection/Insp_OIL SYSTEM.html
@@ -1,1 +1,42 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">OS1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check oil cooler mounting and check fittings for leaks.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS2</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check oil hoses for chafing or leaks.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Turn master switch ON and check Chip Detector Warn Light.  Should be OFF.  Push to test warn light.  If light is ON initially, remove chip detector(s), inspect, clean and reinstall.  Perform operational check of Chip Indicating System.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS4</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check breather line on accessory gear box for leaks.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS5</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Remove and clean chip detector.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS6</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Remove and clean oil screen.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS7</td>
+    <td class="cellInspectionInterval">(---)</td>
+    <td class="cellInspectionText">For oil change recommendations, refer to the applicable Pratt and Whitney Service Bulletin.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">OS8</td>
+    <td class="cellInspectionInterval">(---)</td>
+    <td class="cellInspectionText">Make all other oil system checks as called out in the Engine Maintenance Manual.</td>
+  </tr>
+</table>
