--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -7,7 +7,7 @@
   <tr>
     <td class="cellInspectionNumber">EM2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check security of fuel and oil lines and controls at all connections. Inspect for fretting/chafing of all lines and controls.</td>t
+    <td class="cellInspectionText">Check security of fuel and oil lines and controls at all connections. Inspect for fretting/chafing of all lines and controls.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM3</td>
