Update Insp_POWER AND PROPELLER SPEED COORDINATING SYSTEM.html

--- a/html/Inspection/Insp_POWER AND PROPELLER SPEED COORDINATING SYSTEM.html
+++ b/html/Inspection/Insp_POWER AND PROPELLER SPEED COORDINATING SYSTEM.html
@@ -1,1 +1,7 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">PPS1</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check engine rigging as called out in Engine Manuals. (Or more frequent intervals if required).</td>
+  </tr>
+</table>
