--- a/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
+++ b/html/Inspection/Insp_MAIN LANDING GEAR AND BRAKES.html
@@ -1,1 +1,42 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">MLG1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect tires for cuts, wear, and inflation. [60 psi (Unloaded) and 62 psi (Loaded)].</td>
+  </tr>
+ <tr>
+    <td class="cellInspectionNumber">MLG2</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect brakes for lining wear, condition of disc, brake fluid leaks, etc. Check torque plate for cracks. Inspect inside and outside edges of wheel for cracks. Inspect for security of brake line.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check master cylinders for leaks, test firmness of brakes and bleed (if necessary), check for ample fluid in brake reservoir. (See Maintenance Section, BRAKE BLEEDING).</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG4</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check operation of parking brake and look for leaks.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG5</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check main gear leg visually for cracks, nicks, or corrosion.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG6</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check main gear clamp block for security and for straightness using a straight edge. Check attach bolts visually. (Refer to Maintenance Section, MAIN GEAR SPRING.)</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Hoist aircraft and check for looseness in main gear attachments. This would be a good time to change any bolts that are nearing end of safe life.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">MLG8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check torque on main gear attach bolts. (See Maintenance Section MAIN GEAR SPRING).</td>
+  </tr>
+</table>
