--- a/html/Inspection/Insp_TAIL GEAR.html
+++ b/html/Inspection/Insp_TAIL GEAR.html
@@ -1,1 +1,42 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">TLG1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect tire for cuts, wear, and inflation (60 psi.)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG2</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check lock pin operation and condition of centering springs.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Jack tail wheel clear of ground and check for looseness of housing on spring. (See Maintenance Section TAIL WHEEL FORK HOUSING).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG4</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">With tail wheel off ground, rotate wheel for signs of dry wheel bearings. Check for looseness on axle, check locking pin for free engagement to fork, check fork for looseness in housing, check for wear on brass wear plate. (See Maintenance Section TAIL WHEEL FORK)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG5</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check tail gear spring visually for cracks or nicks.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG6</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check torque of tail spring attach bolts.  Check torque of tail spring to tail gear bolts.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Remove tail wheel lock pin housing, slide out locking pin, and check for straightness and wear. Lubricate, re-install and check alignment as called out in the TAIL WHEEL LOCK PIN AND HOUSING of the Maintenance Section of this manual.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">TLG8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Jack under the stabilizer strut fitting and check for looseness of the tail spring to the fuselage frame. (See Maintenance Section, TAIL GEAR SPRING).  Also change the forward spring attach bolt.  Check condition of aluminum pad under spring.</td>
+  </tr>
+</table>
