--- a/html/Inspection/Insp_FUSELAGE FRAME.html
+++ b/html/Inspection/Insp_FUSELAGE FRAME.html
@@ -1,1 +1,27 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">FF1</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check for cracks in upper and lower aft fuselage structure, especially upper aft L/H 	longeron per S/L #195. Check for cracks around tail spring attach area. Check for 	cracks around main gear attach area.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">FF2</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check condition of paint and re-finish where necessary.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">FF3</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect engine mount attach bushings and surrounding tubes for cracks.  Inspect area around wing attach bushings for cracks.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">FF4</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect all other highly stressed areas for cracks such as rear spar fittings, skin attach brackets, spray boom attach tubes, flap control attachments, control stop brackets, etc.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">FF5</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Conduct general inspection of entire fuselage frame. Check for cracks and corrosion.</td>
+  </tr>
+</table>
