--- a/html/Inspection/Insp_AILERONS.html
+++ b/html/Inspection/Insp_AILERONS.html
@@ -1,1 +1,27 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">A1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect all skins, spar, and ribs for cracks, loose rivets. Inspect around counterweight support structure for cracks.</td>
+  </tr>
+ <tr>
+    <td class="cellInspectionNumber">A2</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check condition of counterweight attachment.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">A3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check condition of aluminum hinges and attachment to spar, check steel hinges for corrosion or cracks.</td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">A4</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check aileron push-rods for cracks in threads and bearing condition. </td>
+  </tr>
+   <tr>
+    <td class="cellInspectionNumber">A5</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check aileron travel: 17° up, 13° down, +/- 1°.</td>
+  </tr>
+</table>
