Adding scaffolding for mx section.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
     </div>
 
 
-
     <script src="code/DocSection.js"></script>
+
+
+
+    <script src="DocDef_2_Maintenance.js"></script>
     <script src="DocDef.js"></script>
 </body>
 
