--- a/html/Inspection/Insp_FUEL SYSTEM.html
+++ b/html/Inspection/Insp_FUEL SYSTEM.html
@@ -7,7 +7,7 @@
     <tr>
     <td class="cellInspectionNumber">FS2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText"><Check all drain fittings and valves for leaks./td>
+    <td class="cellInspectionText"><Check all drain fittings and valves for leaks.</td>
   </tr>
     <tr>
     <td class="cellInspectionNumber">FS3</td>
