--- a/html/Inspection/Insp_FLAPS.html
+++ b/html/Inspection/Insp_FLAPS.html
@@ -1,1 +1,36 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">F1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">With flaps full down, move ailerons through full travel to check clearance between flap and aileron push-rods.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">F2</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect all skins, spar, and ribs for cracks, loose rivets, or corrosion.</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check condition of steel hinges and attachments to spar.  (Reference S/L #216).</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F4</td>
+    <td class="cellInspectionInterval">(400)</td>
+    <td class="cellInspectionText">Inspect flap actuator shaft, bushing and bearing for wear, per S.I.L. #802-0021A.  Significant wear requires replacement of parts or the complete actuator and is defined as ½” or more of flap trailing edge movement with moderate hand pressure on the trailing edge.</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F5</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect flap push-rods for bearing alignment, dragging on other parts, freedom of movement.</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F6</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check flap travel and rigging. (See Maintenance Section, AILERON AND FLAP RIGGING.)</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check flap pushrod bolt for straightness. (See Maintenance Section, FLAPS.)</td>
+  </tr><tr>
+    <td class="cellInspectionNumber">F8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect flap actuator and mount for security, cracks, and for proper operation.  If you have p/n 71112-1 actuator, also inspect for fluid leaks and worn motor brushes.</td>
+  </tr>
+</table>
