--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -1,1 +1,47 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">E1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check vertical fin front spar attach bolt torque at fuselage fittings (420 inch-pounds at nut).</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">E2</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect vertical fin rear spar for cracks near top longeron connection.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check stabilizers and vertical fin for skin cracks, loose rivets, cracks in spars, ribs, corrosion.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E4</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check trim tab attachments to elevators. Check horn.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E5</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check Neoprene washer at elevator down stop. (See Maintenance Section, ELEVATORS.)</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E6</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check stabilizer attaching pedestal for cracks per S/L #180A. When the replacement pedestal is installed, inspections may be performed on a 12-month basis.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E7</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Inspect for corrosion on internal horizontal stabilizer braces per S/L #98.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E8</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Check torque on all bolts connecting rudder and elevators to fixed surfaces and at elevator horn connection to pedestal and push-rod. Torque should be 100 inch-pounds at the nut.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">E9</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and cracking as referenced in S/L #198.  Check bolt torque and tighten check nuts.  (See Maintenance Section, STABILIZER RIGGING).</td>
+  </tr>
+</table>
