--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -44,4 +44,44 @@
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect horizontal stabilizer struts and fittings for corrosion, erosion, and cracking as referenced in S/L #198.  Check bolt torque and tighten check nuts.  (See Maintenance Section, STABILIZER RIGGING).</td>
   </tr>
+  <tr>
+    <td class="cellInspectionNumber">E10</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check torque of stabilizer eye-bolts.  Torque of AN47 eyebolts is 600 in-lbs.  Torque for 9/16” diameter p/n 30775-1 eye-bolts is 100 ft-lbs.</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E11</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect all elevator and rudder hinges for wear, loose hardware, and cracking.</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E12</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect bushings and bolts through rudder horn for wear.</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E13</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check control surface travel: Elevators 29° up, 15° down. Rudder travel 24° R. or L. All travels +/- 1°.</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E14</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check elevator trim tab travel:  With nose full DOWN Trim, Tab at 8° UP from centered (+/- 1 ½ °) (Tab Trailing Edge UP).  With nose full UP Trim, Tab at 11° DOWN from centered (+/- 1 ½ °) (Tab Trailing Edge DOWN)   For Department of State aircraft, travel is 11° UP, 8° DOWN +/- 1°.</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E15</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Remove gap covers from stabilizers and check torque on bolts attaching stabilizers to fuselage. (See Maintenance Section, HORIZONTAL STABILIZERS.)</td>
+  </tr>
+    <tr>
+    <td class="cellInspectionNumber">E16</td>
+    <td class="cellInspectionInterval">(1350)</td>
+    <td class="cellInspectionText">For planes through s/n 802A-0188, replace eyebolts in stabilizer at strut fittings per S/L #129.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">E17</td>
+    <td class="cellInspectionInterval">(5000)</td>
+    <td class="cellInspectionText">For planes s/n 802A-0189 and subs, and those modified IAW SL#129A, replace eyebolts in stabilizer at strut fittings per S/L #129.</td>
+  </tr>
 </table>
