--- a/html/Inspection/Insp_COCKPIT.html
+++ b/html/Inspection/Insp_COCKPIT.html
@@ -1,1 +1,47 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">C1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check windshield and canopy door glass for missing screws, cracks, scratches, or crazing.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">C2</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check door hinges and latches for snug fit. Inspect weather stripping around door frame.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C3</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check radio box fasteners.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C4</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Perform radio operational check.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C5</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check condition of seat covers.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C6</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check condition of seat belt and shoulder harness.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C7</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check instrument lines for leaks, chafing, security.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C8</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Check condition of markings on instruments and placard condition.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">C9</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">If AmSafe Airbag system is installed, perform inspection and functional test of system in accordance with AmSafe Document Number E510500.</td>
+  </tr>
+</table>
