Update Insp_AIR CONDITIONING SYSTEM.html

--- a/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
+++ b/html/Inspection/Insp_AIR CONDITIONING SYSTEM.html
@@ -1,1 +1,22 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">AC1</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check compressor drive belt tension and condition of belt.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">AC2</td>
+    <td class="cellInspectionInterval">(300)</td>
+    <td class="cellInspectionText">Inspect drive pad quill shaft and grease quill shaft splines. </td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">AC3</td>
+    <td class="cellInspectionInterval">(800)</td>
+    <td class="cellInspectionText">Replace drive pad bearings.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">AC4</td>
+    <td class="cellInspectionInterval">(12 Months)</td>
+    <td class="cellInspectionText">Inspect general condition of system and check freon charge.</td>
+  </tr>
+</table>
