Update Insp_FIRE GATE GEN II HYDRAULIC SYSTEM.html

--- a/html/Inspection/Insp_FIRE GATE GEN II HYDRAULIC SYSTEM.html
+++ b/html/Inspection/Insp_FIRE GATE GEN II HYDRAULIC SYSTEM.html
@@ -1,1 +1,27 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<table class="tableInspections">
+    <tr>
+    <td class="cellInspectionNumber">FRDS1</td>
+    <td class="cellInspectionInterval">(6 Months)</td>
+    <td class="cellInspectionText">Check accumulator pressure.</td>
+  </tr>
+<tr>
+    <td class="cellInspectionNumber">FRDS2</td>
+    <td class="cellInspectionInterval">(6 Months)</td>
+    <td class="cellInspectionText">Check low pressure filter.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FRDS3</td>
+    <td class="cellInspectionInterval">(6 Months)</td>
+    <td class="cellInspectionText">Check high pressure filter.</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FRDS4</td>
+    <td class="cellInspectionInterval">(3-5 Years)</td>
+    <td class="cellInspectionText">Replace hydraulic filter elements (high-and-low pressure).</td>
+  </tr>
+  <tr>
+    <td class="cellInspectionNumber">FRDS5</td>
+    <td class="cellInspectionInterval">(3-5 Years)</td>
+    <td class="cellInspectionText">Replace hydraulic oil. (See Section 2-HYDRAULICS).</td>
+  </tr>
+</table>
