added small caution box style, updated description-electrical layout

--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -12,7 +12,13 @@
   <tr>
     <td class="cellInspectionNumber">EM3</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then power lever through range of travel and look for loose connections, binding parts, rubbing, etc.</td>
+    <td class="cellInspectionText">
+      Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then power lever through range of travel and look for loose connections, binding parts, rubbing, etc.
+      <div class="boxCautionSmall">
+        <p class="boxCautionSmallHeader">CAUTION</p>
+        <p class="boxCautionSmallText">Do not move power lever into reverse position with engine stopped or controls will be damaged.</p>
+      </div>
+    </td>
   </tr>
   <tr>
   <td class="cellInspectionNumber">EM4</td>
