--- a/index.html
+++ b/index.html
@@ -61,6 +61,47 @@
 
 
 
+    <div class="maintenanceHeaderRight">
+        <div style="display: inline-block; width: 30%; line-height:1em; margin:0; text-align: left;">
+            <p style="line-height: 1em; margin:0;">AT-802/802A</p>
+            <p style="line-height: 1em; margin:0;">Owner's Manual</p>
+            <p style="line-height: 1em; margin:0;">Maintenance</p>
+        </div>
+        <div style="display: inline-block; width: 30%;">
+            <p style="font-size: 1.25em; font-weight: bold; line-height: 1em; margin: 0;">Air Tractor</p>
+            <p style="font-size: .75em; font-weight: bold; line-height: 1em; margin:0">Olney, TX</p>
+        </div>
+        <div style="display: inline-block; width: 30%; text-align: right;">
+            <p style="line-height: 1em; margin:0;">Number:<span
+                    style="display: inline-block; width: 5em;">03-0121</span></p>
+            <p style="line-height: 1em; margin:0;">Date:<span style="display: inline-block; width: 5em;">12/12/24</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Page:<span class="pgNumMaint"
+                    style="display: inline-block; width: 5em;">2-</span></p>
+        </div>
+    </div>
+    <div class="maintenanceHeaderLeft">
+        <div style="display: inline-block; width: 30%; text-align: left;">
+            <p style="line-height: 1em; margin:0;">Number:
+                <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Date:
+                <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Page:
+                <span class="pgNumMaint" style="display: inline-block; width: 5em; text-align: right;">2-</span>
+            </p>
+        </div>
+        <div style="display: inline-block; width: 30%;">
+            <p style="font-size: 1.25em; font-weight: bold; line-height: 1em; margin: 0;">Air Tractor</p>
+            <p style="font-size: .75em; font-weight: bold; line-height: 1em; margin:0">Olney, TX</p>
+        </div>
+        <div style="display: inline-block; width: 30%; line-height:1em; margin:0; text-align: right;">
+            <p style="line-height: 1em; margin:0;">AT-802/802A</p>
+            <p style="line-height: 1em; margin:0;">Owner's Manual</p>
+            <p style="line-height: 1em; margin:0;">Maintenance</p>
+        </div>
+    </div>
 
 
 
