--- a/html/Inspection/Insp_WINGS.html
+++ b/html/Inspection/Insp_WINGS.html
@@ -1,32 +1,37 @@
 <table class="tableInspections">
-    <tr>
+  <tr>
     <td class="cellInspectionNumber">W1</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Remove inspection covers and check for cracks in ribs or spar webs.</td>
   </tr>
-tr>
+  <tr>
     <td class="cellInspectionNumber">W2</td>
     <td class="cellInspectionInterval">(300)</td>
     <td class="cellInspectionText">Inspect wing skins for cracks, loose rivets, and for corrosion. Keep clean.</td>
   </tr>
-  tr>
+  <tr>
     <td class="cellInspectionNumber">W3</td>
     <td class="cellInspectionInterval">(12 Months)</td>
     <td class="cellInspectionText">Inspect wing attach angles for wear, cracks or missing nuts.</td>
   </tr>
-  tr>
+  <tr>
     <td class="cellInspectionNumber">W4</td>
     <td class="cellInspectionInterval">(1,000)</td>
-    <td class="cellInspectionText">Remove and inspect the rear spar bolt per instructions in the Maintenance Section, WING ATTACHMENT TO FUSELAGE.</td>
+    <td class="cellInspectionText">Remove and inspect the rear spar bolt per instructions in the Maintenance Section,
+      WING
+      ATTACHMENT TO FUSELAGE.</td>
   </tr>
-  tr>
+  <tr>
     <td class="cellInspectionNumber">W5</td>
     <td class="cellInspectionInterval">(2,000)</td>
-    <td class="cellInspectionText">Inspect the wing center splice connection as described in the Maintenance Section, WING CENTER SPLICE CONNECTION.</td>
+    <td class="cellInspectionText">Inspect the wing center splice connection as described in the Maintenance Section,
+      WING
+      CENTER SPLICE CONNECTION.</td>
   </tr>
-  tr>
+  <tr>
     <td class="cellInspectionNumber">W6</td>
     <td class="cellInspectionInterval">(2000)</td>
-    <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and rotate ¼ turn to insure that they are not frozen.  (See Section 2 – WING ATTACHMENT TO FUSELAGE).</td>
+    <td class="cellInspectionText">Loosen (one at a time) the four AN6 bolts through the wing attach angles and rotate ¼
+      turn to insure that they are not frozen. (See Section 2 – WING ATTACHMENT TO FUSELAGE).</td>
   </tr>
 </table>
