quotes and box styling

--- a/html/Maintenance/Flap Removal.html
+++ b/html/Maintenance/Flap Removal.html
@@ -1,6 +1,4 @@
-<b>Flap Removal</b>
-
-<ol type=”1”>
+<ol type='1'>
     <li>Remove fuselage side-skin immediately inboard of the flap’s leading edge.</li>
     <li>Partially extend the flap to gain easy access to the bolt that attaches the flap push-rod to the flap.</li>
     <li>While holding up the trailing edge of the flap, remove the AN4 bolt that attaches the flap push-rod to the flap.</li>
@@ -9,5 +7,4 @@
     <li>Remove the washers and bolt from the center flap-support bearing.</li>
     <li>With assistance in supporting the flap at both ends, remove the remaining washers and the inboard and outboard bolts.</li>
     <li>Carefully lift the flap clear of the airplane.</li>
-
 </ol>
