--- a/html/Description/Kawak Throttle Quadrant.html
+++ b/html/Description/Kawak Throttle Quadrant.html
@@ -1,1 +1,4 @@
-<p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant</p>
+
+<div style="background-color: lightblue;">
+    <p>The Kawak throttle quadrant replaces the Air Tractor throttle quadrant</p>
+</div>
