--- a/index.html
+++ b/index.html
@@ -149,11 +149,66 @@
     </div>
 
 
+
+    <div class="lubricationHeaderRight">
+        <div style="display: inline-block; width: 30%; line-height:1em; margin:0; text-align: left;">
+            <p style="line-height: 1em; margin:0;">AT-802/802A</p>
+            <p style="line-height: 1em; margin:0;">Owner's Manual</p>
+            <p style="line-height: 1em; margin:0;">Lubrication</p>
+        </div>
+        <div style="display: inline-block; width: 30%;">
+            <p style="font-size: 1.25em; font-weight: bold; line-height: 1em; margin: 0;">Air Tractor</p>
+            <p style="font-size: .75em; font-weight: bold; line-height: 1em; margin:0">Olney, TX</p>
+        </div>
+        <div style="display: inline-block; width: 30%; text-align: right;">
+            <p style="line-height: 1em; margin:0;">Number:<span
+                    style="display: inline-block; width: 5em;">03-0121</span></p>
+            <p style="line-height: 1em; margin:0;">Date:<span style="display: inline-block; width: 5em;">12/12/24</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Page:<span class="pgNumLube"
+                    style="display: inline-block; width: 5em;">4-</span></p>
+        </div>
+    </div>
+    <div class="lubricationHeaderLeft">
+        <div style="display: inline-block; width: 30%; text-align: left;">
+            <p style="line-height: 1em; margin:0;">Number:
+                <span style="display: inline-block; width: 5em; text-align: right;">03-0121</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Date:
+                <span style="display: inline-block; width: 5em; text-align: right;">12/12/24</span>
+            </p>
+            <p style="line-height: 1em; margin:0;">Page:
+                <span class="pgNumLube" style="display: inline-block; width: 5em; text-align: right;">4-</span>
+            </p>
+        </div>
+        <div style="display: inline-block; width: 30%;">
+            <p style="font-size: 1.25em; font-weight: bold; line-height: 1em; margin: 0;">Air Tractor</p>
+            <p style="font-size: .75em; font-weight: bold; line-height: 1em; margin:0">Olney, TX</p>
+        </div>
+        <div style="display: inline-block; width: 30%; line-height:1em; margin:0; text-align: right;">
+            <p style="line-height: 1em; margin:0;">AT-802/802A</p>
+            <p style="line-height: 1em; margin:0;">Owner's Manual</p>
+            <p style="line-height: 1em; margin:0;">Lubrication</p>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
     <script src="code/DocSection.js"></script>
 
 
 
     <script src="DocDef_2_Maintenance.js"></script>
+    <script src="DocDef_3_Inspections.js"></script>
+    <script src="DocDef_4_Lubrication.js"></script>
+    <script src="DocDef_5_Repairs.js"></script>
+    <script src="DocDef_6_AirworthinessLimitations.js"></script>
     <script src="DocDef.js"></script>
 </body>
 
